--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>java-dotenv</artifactId>
             <version>5.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.14</version>
+        </dependency>
     </dependencies>
 
     <build>
