--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 spring.application.name=patient-service
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.sql.init.mode=always
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+# Database connection properties for PostgreSQL
+#spring.datasource.url=SPRING_DATASOURCE_URL
+#spring.datasource.username=SPRING_DATASOURCE_USERNAME
+#spring.datasource.password=SPRING_DATASOURCE_PASSWORD
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.sql.init.mode=always
 
 server.port=4000
-
 logging.level.root=info
