--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.application.name=patient-service
 #spring.datasource.password=SPRING_DATASOURCE_PASSWORD
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.kafka.bootstrap-servers=kafka:9092
+#spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 
