--- a/analytic-service/src/main/resources/application.properties
+++ b/analytic-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=analytic-service
 
 spring.kafka.bootstrap-servers=kafka:9092
 
-# Use Deserializer classes (NOT Serializer)
+## Use Deserializer classes (NOT Serializer)
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
 
-# required for consumers
-spring.kafka.consumer.group-id=analytics-group
+server.port=4002
+logging.level.root=info
