--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
       server:
         webflux:
           routes:
+            - id: auth-service-route
+              uri: http://auth-service:4005
+              predicates:
+                - Path=/auth/**
+              filters:
+                - StripPrefix=1
             - id: patient-service-route
               uri: http://patient-service:4000
               predicates:
@@ -21,4 +27,6 @@ spring:
                 - RewritePath=/api-docs/patients,/v3/api-docs
 #              /v3/api-docs
 #              /swagger-ui/index.html
+
+
 
