--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -13,12 +13,24 @@ spring:
                 - Path=/auth/**
               filters:
                 - StripPrefix=1
+
+
             - id: patient-service-route
               uri: http://patient-service:4000
               predicates:
                 - Path=/api/patients/**
               filters:
                 - StripPrefix=1
+                - JwtValidation
+
+#api documentation
+            - id: api-docs-auth-route
+              uri: http://auth-service:4005
+              predicates:
+                - Path=/api-docs/**
+              filters:
+                - RewritePath=/api-docs/auth,/v3/api-docs
+
             - id: api-docs-patient-route
               uri: http://patient-service:4000
               predicates:
